--- a/BlueView/Views/Base.lproj/Main.storyboard
+++ b/BlueView/Views/Base.lproj/Main.storyboard
@@ -57,6 +57,63 @@
             </objects>
             <point key="canvasLocation" x="1336.8" y="176.76161919040482"/>
         </scene>
+        <!--Video Settings View Controller-->
+        <scene sceneID="k55-EX-DSY">
+            <objects>
+                <viewController id="egk-iO-ijg" customClass="VideoSettingsViewController" customModule="BlueView" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sTs-Lc-8qQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="hVO-XG-dbh">
+                                <rect key="frame" x="10" y="30" width="355" height="448"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Sm-s7-KfX">
+                                        <rect key="frame" x="5" y="0.0" width="345" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gYf-CQ-aL4">
+                                        <rect key="frame" x="5" y="34" width="345" height="62"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WL8-sO-qjn">
+                                        <rect key="frame" x="5" y="100" width="345" height="348"/>
+                                        <color key="backgroundColor" red="0.098039215690000001" green="0.58039215690000001" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="gYf-CQ-aL4" firstAttribute="leading" secondItem="hVO-XG-dbh" secondAttribute="leading" constant="5" id="3I3-OS-HzL"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Sm-s7-KfX" secondAttribute="trailing" constant="5" id="92E-Z0-Csz"/>
+                                    <constraint firstAttribute="trailing" secondItem="gYf-CQ-aL4" secondAttribute="trailing" constant="5" id="IBF-tx-hOC"/>
+                                    <constraint firstItem="WL8-sO-qjn" firstAttribute="leading" secondItem="hVO-XG-dbh" secondAttribute="leading" constant="5" id="LGU-QE-nO6"/>
+                                    <constraint firstItem="2Sm-s7-KfX" firstAttribute="leading" secondItem="hVO-XG-dbh" secondAttribute="leading" constant="5" id="MUZ-Ib-zKa"/>
+                                    <constraint firstAttribute="height" constant="448" id="Qj7-8E-vdL"/>
+                                    <constraint firstAttribute="trailing" secondItem="WL8-sO-qjn" secondAttribute="trailing" constant="5" id="oYK-Jz-gsL"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="STM-u9-Uuz" firstAttribute="trailing" secondItem="hVO-XG-dbh" secondAttribute="trailing" constant="10" id="4Tm-2t-pPl"/>
+                            <constraint firstItem="hVO-XG-dbh" firstAttribute="leading" secondItem="STM-u9-Uuz" secondAttribute="leading" constant="10" id="Xgs-h5-G3q"/>
+                            <constraint firstItem="hVO-XG-dbh" firstAttribute="top" secondItem="STM-u9-Uuz" secondAttribute="top" constant="10" id="dRf-Qp-wYm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="STM-u9-Uuz"/>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionTextView" destination="gYf-CQ-aL4" id="0Hj-PQ-ldf"/>
+                        <outlet property="playerView" destination="WL8-sO-qjn" id="Oym-AO-R7Q"/>
+                        <outlet property="titleTextField" destination="2Sm-s7-KfX" id="Jpo-Dq-2tC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dgJ-cx-iqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1356" y="884.70764617691157"/>
+        </scene>
         <!--Video View Controller-->
         <scene sceneID="eYr-As-8X7">
             <objects>
